--- a/students/jebone.html
+++ b/students/jebone.html
@@ -79,10 +79,6 @@ img {
 <li><a href="#dplrytbl_df">dplry::tbl_df</a></li>
 <li><a href="#dplry-loosely">dplry loosely</a></li>
 <li><a href="#wrangling-data">Wrangling Data</a></li>
-<li><a href="#tidying-up-data">4. Tidying up Data</a></li>
-<li><a href="#tidyr">tidyr</a></li>
-<li><a href="#dplyr">dplyr</a></li>
-<li><a href="#answers-and-tasks">Answers and tasks</a></li>
 </ul>
 </div>
 
@@ -221,290 +217,13 @@ glimpse(d)</code></pre>
 #unite(storms2,&quot;date&quot;, y, m, d, sep=&quot;-&quot;) 
 
 
+#select(storms,-storm)
 #install.packages(&quot;dplyr&quot;)
 #install.packages(&quot;nycflights123&quot;)
 
 #filter(storms,wind&gt;=50)
-#mutate(storms,ratio=pressure/wind, #inverse=ratio^-1)
+#mutate(storms,ratio=pressure/wind, inverse=ratio^-1)
 #arrange(storms,desc(wind))</code></pre>
-</div>
-<div id="tidying-up-data" class="section level2">
-<h2>4. Tidying up Data</h2>
-<pre class="r"><code>## data
-
-### EDAWR</code></pre>
-<pre class="r"><code>install.packages(&quot;devtools&quot;)
-# devtools::install_github(&quot;rstudio/EDAWR&quot;)
-library(EDAWR)
-help(package='EDAWR')
-?storms    # wind speed data for 6 hurricanes
-?cases     # subset of WHO tuberculosis
-?pollution # pollution data from WHO Ambient Air Pollution, 2014
-?tb        # tuberculosis data
-View(storms)
-View(cases)
-View(pollution)</code></pre>
-<div id="slicing" class="section level3">
-<h3>slicing</h3>
-<pre class="r"><code># storms
-storms$storm
-storms$wind
-storms$pressure
-storms$date
-
-# cases
-cases$country
-names(cases)[-1] #removes the first name
-unlist(cases[1:3, 2:4])
-
-# pollution
-pollution$city[c(1,3,5)]
-pollution$amount[c(1,3,5)]
-pollution$amount[c(2,4,6)]
-
-# ratio
-storms$pressure / storms$wind</code></pre>
-</div>
-</div>
-<div id="tidyr" class="section level2">
-<h2>tidyr</h2>
-<p>Two main functions: gather() and spread()</p>
-<pre class="r"><code># install.packages(&quot;tidyr&quot;)
-library(tidyr)
-library(dplyr)
-?gather # gather to long
-?spread # spread to wide</code></pre>
-<div id="gather" class="section level3">
-<h3><code>gather</code></h3>
-<pre class="r"><code>cases
-gather(cases, &quot;year&quot;, &quot;n&quot;, 2:4) # if use &quot;-2&quot; instead of 2:4 it will take out the second column
-
-gather(cases, &quot;year&quot;, &quot;n&quot;, -country)
-
-cases %&gt;%
-  gather(&quot;year&quot;, &quot;n&quot;, -country)%&gt;%
-  filter(
-    year %in% c(2011,2013),
-    !country %in% c('FR','US')) </code></pre>
-</div>
-<div id="spread" class="section level3">
-<h3><code>spread</code></h3>
-<pre class="r"><code>pollution
-spread(pollution, size, amount)</code></pre>
-<p>Other functions to extract and combine columns…</p>
-</div>
-<div id="separate" class="section level3">
-<h3><code>separate</code></h3>
-<pre class="r"><code>storms
-storms2 = separate(storms, date, c(&quot;year&quot;, &quot;month&quot;, &quot;day&quot;), sep = &quot;-&quot;) #use dash as the seperator
-storms2
-
-storms2 = separate(storms, date, c(&quot;year&quot;, &quot;month&quot;, &quot;day&quot;), sep = c(4,6)) #use c(4,6) to indicate where you want the column separation to occur
-storms2
-
-storms%&gt;%
-  mutate(date_str=as.character(date))</code></pre>
-</div>
-<div id="unite" class="section level3">
-<h3><code>unite</code></h3>
-<pre class="r"><code>storms2
-unite(storms2, &quot;date&quot;, year, month, day, sep = &quot;-&quot;)</code></pre>
-<p><strong>Recap: tidyr</strong>:</p>
-<ul>
-<li><p>A package that reshapes the layout of data sets.</p></li>
-<li><p>Make observations from variables with <code>gather()</code> Make variables from observations with <code>spread()</code></p></li>
-<li><p>Split and merge columns with <code>unite()</code> and <code>separate()</code></p></li>
-</ul>
-</div>
-</div>
-<div id="dplyr" class="section level2">
-<h2>dplyr</h2>
-<p>A package that helps transform tabular data</p>
-<pre class="r"><code># install.packages(&quot;dplyr&quot;)
-library(dplyr)
-?select
-?filter
-?arrange
-?mutate
-?group_by
-?summarise</code></pre>
-<p>See sections in the <a href="./refs/cheatsheets/data-wrangling-cheatsheet.pdf">data-wrangling-cheatsheet.pdf</a>:</p>
-<ul>
-<li>Subset Variables (Columns), eg <code>select()</code></li>
-<li>Subset Observations (Rows), eg <code>filter()</code></li>
-<li>Reshaping Data - Change the layout of a data set, eg <code>arrange()</code></li>
-<li>Make New Variables, eg <code>mutate()</code></li>
-<li>Group Data, eg <code>group_by()</code> and <code>summarise()</code></li>
-</ul>
-<div id="select" class="section level3">
-<h3><code>select</code></h3>
-<pre class="r"><code>storms
-select(storms, storm, pressure)
-storms %&gt;% select(storm, pressure)</code></pre>
-</div>
-<div id="filter" class="section level3">
-<h3><code>filter</code></h3>
-<pre class="r"><code>storms
-filter(storms, wind &gt;= 50)
-storms %&gt;% filter(wind &gt;= 50)
-
-storms %&gt;%
-  filter(wind &gt;= 50) %&gt;%
-  select(storm, pressure)</code></pre>
-</div>
-<div id="mutate" class="section level3">
-<h3><code>mutate</code></h3>
-<pre class="r"><code>storms %&gt;%
-  mutate(ratio = pressure / wind) %&gt;%
-  select(storm, ratio)</code></pre>
-</div>
-<div id="group_by" class="section level3">
-<h3><code>group_by</code></h3>
-<pre class="r"><code>pollution
-pollution %&gt;% group_by(city)</code></pre>
-</div>
-<div id="summarise" class="section level3">
-<h3><code>summarise</code></h3>
-<pre class="r"><code># by city
-pollution %&gt;% 
-  group_by(city) %&gt;%
-  summarise(
-    mean = mean(amount), 
-    sum = sum(amount), 
-    n = n())
-
-# by size
-pollution %&gt;% 
-  group_by(size) %&gt;%
-  summarise(
-    mean = mean(amount), 
-    sum = sum(amount), 
-    n = n())</code></pre>
-<p>note that <code>summarize</code> synonymously works</p>
-</div>
-<div id="ungroup" class="section level3">
-<h3><code>ungroup</code></h3>
-<pre class="r"><code>pollution %&gt;% 
-  group_by(size)
-
-pollution %&gt;% 
-  group_by(size) %&gt;%
-  ungroup()</code></pre>
-</div>
-<div id="multiple-groups" class="section level3">
-<h3>multiple groups</h3>
-<pre class="r"><code>tb %&gt;%
-  group_by(country, year) %&gt;%
-  summarise(cases = sum(cases))
-  summarise(cases = sum(cases))</code></pre>
-</div>
-</div>
-<div id="answers-and-tasks" class="section level2">
-<h2>Answers and tasks</h2>
-<div id="tidy-co2-emissions" class="section level3">
-<h3>tidy CO<sub>2</sub> emissions</h3>
-<p><em><strong>Task</strong>. Convert the following table <a href="http://edgar.jrc.ec.europa.eu/overview.php?v=CO2ts1990-2014&amp;sort=des9">CO<sub>2</sub> emissions per country since 1970</a> from wide to long format and output the first few rows into your Rmarkdown. I recommend consulting <code>?gather</code> and you should have 3 columns in your output.</em></p>
-<pre class="r"><code>dir_child = 'students' 
-if (dir_child %in% list.files()){
-  if (interactive()) {  
-    # R Console
-    setwd(dir_child)
-  } else {              
-    # knitting
-    knitr::opts_knit$set(root.dir=dir_child)  
-  }
-}
-
-library(readxl)# install.packages('readxl')
-
-url = 'http://edgar.jrc.ec.europa.eu/news_docs/CO2_1970-2014_dataset_of_CO2_report_2015.xls'
-xls = '../data/co2_europa.xls'
-
-print(getwd())</code></pre>
-<pre><code>## [1] &quot;/Users/JenniferBone/Desktop/Informatics/env-info-test/students&quot;</code></pre>
-<pre class="r"><code>if (!file.exists(xls)){
-  download.file(url, xls)
-}
-co2 = read_excel(xls, skip=12)</code></pre>
-<pre><code>## DEFINEDNAME: 21 00 00 01 0b 00 00 00 01 00 00 00 00 00 00 0d 3b 00 00 0c 00 e0 00 00 00 2c 00 
-## DEFINEDNAME: 21 00 00 01 0b 00 00 00 01 00 00 00 00 00 00 0d 3b 00 00 0c 00 e0 00 00 00 2c 00 
-## DEFINEDNAME: 21 00 00 01 0b 00 00 00 01 00 00 00 00 00 00 0d 3b 00 00 0c 00 e0 00 00 00 2c 00 
-## DEFINEDNAME: 21 00 00 01 0b 00 00 00 01 00 00 00 00 00 00 0d 3b 00 00 0c 00 e0 00 00 00 2c 00</code></pre>
-<pre class="r"><code>View(co2)
-names(co2)&lt;-c('country', 1970:2014)
-View(co2)</code></pre>
-<pre class="r"><code>library(dplyr)</code></pre>
-<pre><code>## 
-## Attaching package: 'dplyr'</code></pre>
-<pre><code>## The following objects are masked from 'package:stats':
-## 
-##     filter, lag</code></pre>
-<pre><code>## The following objects are masked from 'package:base':
-## 
-##     intersect, setdiff, setequal, union</code></pre>
-<pre class="r"><code>library(tidyr)
-#table transformation
-d=co2%&gt;%
-  gather('year','emissions', 2:46)%&gt;%
-  arrange(country, year)
-View(d)</code></pre>
-<p><em><strong>Question</strong>. Why use <code>skip=12</code> argument in <code>read_excel()</code>?</em> It skips the first 12 rows in the excel spreadsheet. The first 12 rows are populated with information that we are not interested in using.</p>
-</div>
-<div id="summarize-per-capita-co2-emissions" class="section level3">
-<h3>summarize per capita CO<sub>2</sub> emissions</h3>
-<p>You’ll join the <a href="https://github.com/jennybc/gapminder">gapminder</a> datasets to get world population per country.</p>
-<p><em><strong>Task</strong>. Report the top 5 emitting countries (not World or EU28) for 2014 using your long format table. (You may need to convert your year column from factor to numeric, eg <code>mutate(year = as.numeric(as.character(year)))</code>. As with most analyses, there are multiple ways to do this. I used the following functions: <code>filter</code>, <code>arrange</code>, <code>desc</code>, <code>head</code>)</em>.</p>
-<pre class="r"><code>mutate(d,year=as.numeric(as.character(year)))</code></pre>
-<pre><code>## Source: local data frame [9,900 x 3]
-## 
-##        country  year emissions
-##          (chr) (dbl)     (dbl)
-## 1  Afghanistan  1970  1813.981
-## 2  Afghanistan  1971  1840.794
-## 3  Afghanistan  1972  1794.831
-## 4  Afghanistan  1973  1817.997
-## 5  Afghanistan  1974  2177.284
-## 6  Afghanistan  1975  1915.441
-## 7  Afghanistan  1976  1815.863
-## 8  Afghanistan  1977  1933.439
-## 9  Afghanistan  1978  3623.652
-## 10 Afghanistan  1979  2915.478
-## ..         ...   ...       ...</code></pre>
-<pre class="r"><code>twentyfourteen=d%&gt;%
-  filter(year %in% c('2014')) %&gt;%
-  filter(!country %in% c('World','EU28'))%&gt;%
-  arrange(desc(emissions))%&gt;%
-  head(n=5)
-View(twentyfourteen)</code></pre>
-<p>The top 5 country emitters in 2014 were : China, USA, India, Russia, Japan.</p>
-<p><em><strong>Task</strong>. Summarize the total emissions by country (not World or EU28) per capita across years from your long format table and return the top 5 emitting countries. (As with most analyses, there are multiple ways to do this. I used the following functions: <code>filter</code>, <code>arrange</code>, <code>desc</code>, <code>head</code>)</em>.</p>
-<pre class="r"><code>mutate(d,year=as.numeric(as.character(year)))</code></pre>
-<pre><code>## Source: local data frame [9,900 x 3]
-## 
-##        country  year emissions
-##          (chr) (dbl)     (dbl)
-## 1  Afghanistan  1970  1813.981
-## 2  Afghanistan  1971  1840.794
-## 3  Afghanistan  1972  1794.831
-## 4  Afghanistan  1973  1817.997
-## 5  Afghanistan  1974  2177.284
-## 6  Afghanistan  1975  1915.441
-## 7  Afghanistan  1976  1815.863
-## 8  Afghanistan  1977  1933.439
-## 9  Afghanistan  1978  3623.652
-## 10 Afghanistan  1979  2915.478
-## ..         ...   ...       ...</code></pre>
-<pre class="r"><code>f=d%&gt;%
-  filter(!country %in% c('World','EU28')) %&gt;%
-  group_by(country)%&gt;%
-  summarise(TotalEmissions=sum(emissions))%&gt;%
-  arrange(desc(TotalEmissions))%&gt;%
-  head(n=5)
-View(f)</code></pre>
-<p>The top 5 country emitters are : USA, China, Russia, Japan, Germany.</p>
-<pre class="r"><code>library(gapminder) # install.packages('gapminder')</code></pre>
-<p>```</p>
-</div>
 </div>
 
 
