github workflow Old vs New headers

--- a/wk05_joining.html
+++ b/wk05_joining.html
@@ -188,6 +188,8 @@ img {
 </div>
 <div id="new-assignment-github-workflow" class="section level3">
 <h3>New Assignment Github Workflow</h3>
+<div id="old" class="section level4">
+<h4>OLD</h4>
 <p>So far to turn in individual assignments, you’ve been editing <code>env-info/students/&lt;user&gt;.Rmd</code> and knitting to <code>env-info/students/&lt;user&gt;.html</code>. Then you push to your repo <code>&lt;user&gt;/env-info</code> before submitting to the course repo <code>ucsb-bren/env-info</code> with a push, and pull request. To update your <code>&lt;user&gt;/env-info</code> with the latest from <code>ucsb-bren/env-info</code>, you also need to do an additional pull request, merge, and pull.</p>
 <table>
 <thead>
@@ -223,6 +225,9 @@ img {
 </tr>
 </tbody>
 </table>
+</div>
+<div id="new" class="section level4">
+<h4>NEW</h4>
 <p>For future assignments, you’ll use a much simpler Github workflow with less possibilities for <a href="http://r-pkgs.had.co.nz/git.html#git-pull">merge conflicts</a>:</p>
 <table>
 <thead>
@@ -259,6 +264,7 @@ img {
 <li><p>Create a new folder <code>env-info_hw</code> inside your local repository <code>&lt;user&gt;.github.io</code>.</p></li>
 </ol>
 <p>It is important that you use the exact spelling for all of the above. Otherwise, we won’t be able to find your homework.</p>
+</div>
 </div>
 <div id="individual-assignment-wk05_ggplot" class="section level3">
 <h3>Individual Assignment <code>wk05_ggplot</code></h3>
