--- a/wk04_tidyr.html
+++ b/wk04_tidyr.html
@@ -147,7 +147,7 @@ img {
 <div id="header">
 <h1 class="title">Week 4: Tidying up Data</h1>
 <h4 class="author"><em>Ben Best</em></h4>
-<h4 class="date"><em>2016-02-09 14:33</em></h4>
+<h4 class="date"><em>2016-02-09 14:34</em></h4>
 </div>
 
 
@@ -394,7 +394,7 @@ pollution %&gt;%
 </div>
 <div id="summarize-co2-emissions" class="section level3">
 <h3>summarize CO<sub>2</sub> emissions</h3>
-<p><em><strong>Task</strong>. Report the top 5 emitting countries (not World or EU28) for <strong>2014</strong> using your long format table. (You may need to convert your year column from factor to numeric, eg <code>mutate(year = as.numeric(as.character(year)))</code>. As with most analyses, there are multiple ways to do this. I used the following functions additional functions: <code>filter</code>, <code>arrange</code>, <code>desc</code>, <code>head</code>)</em>.</p>
+<p><em><strong>Task</strong>. Report the top 5 emitting countries (not World or EU28) for <strong>2014</strong> using your long format table. (You may need to convert your year column from factor to numeric, eg <code>mutate(year = as.numeric(as.character(year)))</code>. As with most analyses, there are multiple ways to do this. I used the following additional functions: <code>filter</code>, <code>arrange</code>, <code>desc</code>, <code>head</code>)</em>.</p>
 <p><em><strong>Task</strong>. Summarize the <strong>total</strong> emissions by country (not World or EU28) across years from your long format table and return the top 5 emitting countries. (As with most analyses, there are multiple ways to do this. I used the following functions: <code>filter</code>, <code>group_by</code>, <code>summarize</code>, <code>sum</code>, <code>arrange</code>, <code>desc</code>, <code>head</code>)</em>.</p>
 </div>
 </div>
